--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,23 @@
     tools:context=".MainActivity">
 
 
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer"
-        android:text="Large Text"
-        android:textSize="25sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/sound1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/sound2"
-        android:layout_marginLeft="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="50dp"
         android:text="sound 1" />
 
     <Button
         android:id="@+id/sound2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/chronometer"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="50dp"
+        android:layout_centerVertical="true"
         android:text="sound 2" />
 
 
@@ -49,7 +42,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/punkte"
         android:textSize="25sp"
-        android:layout_below="@+id/chronometer"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/sound1"/>
 
 </RelativeLayout>
